AUGREL/src/objects/Title_Files__c.object
<CustomObject>
    <description>Title Files are used for attaching files related to Title Cases</description>
    <fields>
        <fullName>Attachment__c</fullName>
        <description>Field to reference actual Attachment ID from the Standard Notes &amp; Attachments.</description>
        <label>Attachment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>MD Relationship to Cases (specifically Title Cases)</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Title_Files</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Printed_Date__c</fullName>
        <description>Date in which this documented was Printed</description>
        <label>Printed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Print Immediately (w/o Title/Lien Release)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Print with Title/Lien Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <description>Link to the actual file.</description>
        <formula>HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; + Attachment__c, &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Attachment</label>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>